# kolam_UR

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  drill_data.c8  env.example  index.html  package-lock.json  package.json  requirements.txt  sim_output.txt  tailwind.config.ts  test_backend_logic.py  test_full_workflow.py  test_gen_endpoint.py  test_gen_key.py  test_industry_readiness.py  test_slider_align.py  test_trl_audit.py  verify_output.txt  vite.config.ts  vite.config.ts.timestamp-1763919228308-a378667fa18bb.mjs  vite.config.ts.timestamp-1765154515476-c9faaee967f.mjs  vite.config.ts.timestamp-1765650236096-ca1c01c0e3c64.mjs
backend/: __init__.py  adaptive_beacon.c8  algo.py  auth.py  beacon_pulse.c8  calibrate_model.py  check_db.py  clean_id.c8  continuous_beacon.c8  create_tables.py  database.py  debug_db.py  demonstrate_json.py  digital_twin_manager.py  digital_twin_sim.py  fhss_chat.py  fhss_utils.py  fix_users_schema.py  gen_from_json_response.json  hackrf_bridge.py  hardware_drivers.py  health_check.py  hop_burst.c8  industrial_logger.py  inspect_table.py  inspect_users.py  kolam_encryption.py  kolam_generator.py  kolam_message_encoder.py  kolam_test_response.json  kolam_transmission.c8  kolam_vae.pth  load_test.c8  logger.py  main.py  matrix_api.py  matrix_resp.json  matrix_to_hops_response.json  matrix_verify.json  migrate_registry.py  (+27 more)
backend/cpp_kernels/: kolam_engine.cpp  kolam_kernel.cpp  wrapper.py
backend/data/: calibration_output.txt  calibration_result.txt  k8_kolam.json  (+9 more)
(+413 files in other folders)
