[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kolam-backend"
version = "2.0.0"
description = "Kolam FHSS Backend Enterprise Edition"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "numpy>=1.26.0",
    "requests",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "pillow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
